Fix the collapse button not working on some pages

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -57,7 +57,7 @@ html, body, #app {
     @apply flex justify-center w-[100vw] h-[100vh] sm:h-[80vh] sm:w-[80vw];
   }
   .user-display-card {
-    @apply bg-bg2 text-text2 rounded-xl relative transition-all duration-300 ease-in-out flex-grow overflow-hidden;
+    @apply bg-bg2 text-text2 rounded-xl relative transition-all duration-300 ease-in-out flex-grow overflow-hidden z-10 px-10;
     max-height: 1000px;
     min-height: 600px;
   }
